# esmjax

./: pyproject.toml
esmjax/modules/: modules.py
tests/: e2e_test.py
