[project]
name = "esmjax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "flax>=0.10.2",
    "jaxtyping>=0.2.36",
    "numpy>=2.2.1",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "fair-esm>=2.0.0",
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
]
